# pyopenms-idfreeqc

./: LICENSE  README.MD  hackathon_ID_free_metrics.ipynb  pyproject.toml
src/pyopenms_idfreeqc/: __init__.py  __main__.py  calculate_metrics.py
