[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyopenms-idfreeqc"
version = "0.1.0"
description = "ID-free QC metrics demo refactored into a reusable package"
readme = "README.MD"
requires-python = ">=3.9"
dependencies = [
    "click",
    "matplotlib",
    "mzqc",
    "numpy",
    "pandas",
    "pyopenms",
    "seaborn",
]

[project.scripts]
pyopenms-idfreeqc = "pyopenms_idfreeqc.calculate_metrics:cli"

