[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyopenms-idfreeqc"
version = "0.1.0"
description = "ID-free QC metrics demo refactored into a reusable package"
readme = "README.MD"
requires-python = ">=3.9"
dependencies = [
    "click",
    "pymzqc>=1.0.1",
    "pyopenms>=3.4.0",
    "seaborn>=0.13.2",
]

[project.scripts]
pyopenms-idfreeqc = "pyopenms_idfreeqc.calculate_metrics:cli"

